# spyware-detector-training

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt  setup.py  spyware-training.txt
.github/workflows/: train_and_release.yml
config/: pipeline.yaml
config/components/: data_processor.yaml  feature_extractor.yaml  feature_selector.yaml  model_trainer.yaml
data/: malwares.csv
src/: data_processor.py  feature_extraction.py  feature_selection.py  interfaces.py  main.py  model_loader.py  model_trainer.py  pipeline.py  registry.py
src/components/: artifact_exporter.py  data_processor.py  feature_extractor.py  feature_selector.py  model_trainer.py
src/utils/: directory.py
tests/: test_data_processing.py
