[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spyware-detector-training"
version = "0.1.0"
description = "Production-ready ML pipeline for spyware detection with Docker support"
readme = "README.md"
authors = [
    {name = "Ahmed N. Abdeltwab", email = "ahmed.n.abdeltwab@gmail.com"},
]
maintainers = [
    {name = "Ahmed N. Abdeltwab", email = "ahmed.n.abdeltwab@gmail.com"},
]
license = {text = "MIT"}
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Cybersecurity Professionals",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.9",
    "Operating System :: POSIX :: Linux",
    "Topic :: Security",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Typing :: Typed",
]
keywords = ["spyware", "malware", "mlops", "security", "docker"]
requires-python = ">=3.9"
dependencies = [
    "pandas==1.5.3",
    "numpy==1.23.5",
    "scikit-learn==1.2.2",
    "PyYAML==6.0",
    "python-dotenv>=1.0.0",
    "loguru>=0.7.0",  # Enhanced logging
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.0",
    "black==23.9.1",
    "flake8==6.1.0",
    "mypy==1.5.1",
    "pytest-cov==4.1.0",
    "types-PyYAML==6.0.12.11",
    "ipython==8.12.0",  # For interactive debugging
]
deploy = [
    "docker>=6.1.3",
    "boto3>=1.28.0",  # For AWS integration
    "google-cloud-storage>=2.0.0",  # For GCP integration
]
docs = [
    "mkdocs==1.5.2",
    "mkdocs-material==9.2.1",
    "mkdocstrings[python]==0.22.0",
]

[project.scripts]
spyware-train = "src.main:main"  # CLI entry point

[project.urls]
Homepage = "https://github.com/ahmed-n-abdeltwab/spyware-detector-training"
Documentation = "https://github.com/ahmed-n-abdeltwab/spyware-detector-training#readme"
Issues = "https://github.com/ahmed-n-abdeltwab/spyware-detector-training/issues"
Changelog = "https://github.com/ahmed-n-abdeltwab/spyware-detector-training/releases"
Docker = "https://hub.docker.com/r/ahmednabdeltwab/spyware-detector"

[tool.setuptools]
packages = ["src"]
package-dir = {"" = "src"}
include-package-data = true
zip-safe = false  # Important for Docker deployments

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.yml", "*.json", "*.pkl"]

[tool.black]
line-length = 88
target-version = ["py39"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.venv
    | build
    | dist
    | notebooks
    | data
    | models
)/|
\.ipynb$
'''

[tool.isort]
profile = "black"
known_first_party = ["src"]
sections = ["FUTURE", "STDLIB", "THIRDPARTY", "FIRSTPARTY", "LOCALFOLDER"]
line_length = 88

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "--cov=src",
    "--cov-report=term-missing:skip-covered",
    "--cov-report=html",
    "--verbose",
    "--durations=10",
]
python_files = "test_*.py"
filterwarnings = [
    "error",
    "ignore::DeprecationWarning:pandas",
    "ignore::UserWarning:sklearn",
]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
no_implicit_optional = true
strict_equality = true
show_error_codes = true
